[tool.poetry]
name = "abctk.obj"
version = "0.2.1"
description = "Python datatype declaration and related functions for the ABC Treebank and related projects"
authors = ["Nori Hayashi <net@hayashi-lin.net>"]
packages = [
    { include = "abctk/obj" }
]

[tool.poetry.dependencies]
python = ">=3.8.0, <4"
numpy = "^1.23.0"
scipy = "^1.9.3"
lark = "^1.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
